// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu render should match the snapshot when the drop down is displayed 1`] = `
<section
  className="Menu"
>
  <header
    className="Menu--header"
    onClick={[Function]}
  >
    <h2
      className="Menu--h2"
    >
      select a project
    </h2>
    <div
      className="Menu--icon-arrow"
    />
  </header>
  <ul
    className="Menu--ul-palettes"
  />
  <button
    className="Menu--button"
    onClick={[Function]}
  >
    save palette
  </button>
  <ul
    className="Menu--drop-down"
  >
    <Connect(ProjectListItem)
      id={1}
      key="my project"
      name="my project"
      setActiveProject={[Function]}
      toggleDropDown={[Function]}
    />
  </ul>
</section>
`;

exports[`Menu render should match the snapshot when there is an active project 1`] = `
<section
  className="Menu"
>
  <header
    className="Menu--header"
    onClick={[Function]}
  >
    <h2
      className="Menu--h2"
    >
      my project
    </h2>
    <div
      className="Menu--icon-arrow"
    />
  </header>
  <ul
    className="Menu--ul-palettes"
  >
    <Connect(PaletteListItem)
      id={1}
      key="1"
      project_id={1}
    />
  </ul>
  <button
    className="Menu--button"
    onClick={[Function]}
  >
    save palette
  </button>
</section>
`;

exports[`Menu render should match the snapshot when there is no active project 1`] = `
<section
  className="Menu"
>
  <header
    className="Menu--header"
    onClick={[Function]}
  >
    <h2
      className="Menu--h2"
    >
      select a project
    </h2>
    <div
      className="Menu--icon-arrow"
    />
  </header>
  <ul
    className="Menu--ul-palettes"
  />
  <button
    className="Menu--button"
    onClick={[Function]}
  >
    save palette
  </button>
</section>
`;
